--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "rehype-katex": "^7.0.1",
-    "remark-math": "^6.0.0"
+    "remark-math": "^6.0.0",
+    "bowserify": "10.2.1"
   },
   "browserslist": {
     "production": [
