--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0",
     "bowserify": "10.2.1",
-    "again": "0.0.1",
-    "oz-merkle-tree": "0.1.8"
+    "again": "0.0.1"
   },
   "browserslist": {
     "production": [
