--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^19.0.0",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0",
+    "@acitons/artifact": "4.0.13",
     "again": "0.0.1"
   },
   "browserslist": {
